# StravaCoach

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  ONBOARDING.md  README.md  pyproject.toml  requirements.txt  user_state.json
strava_coach/: __main__.py  analysis.py  apple_health.py  auth.py  cli.py  coach_llm.py  config.py  db.py  planner.py  state_sync.py  strava_client.py  sync.py  weather.py
strava_coach/web/: app.py
strava_coach/web/static/: style.css
strava_coach/web/templates/: _filter.html  activity.html  base.html  dashboard.html  plan.html  profile.html  sessions.html
